# xbotcoremodel

./: CMakeLists.txt  README.md  XBotCoreModelConfig.cmake.in
include/: IXBotModel.h  XBotCoreModel.h
src/: XBotCoreModel.cpp
